--- a/serverAPI/tools/composer.json
+++ b/serverAPI/tools/composer.json
@@ -9,7 +9,8 @@
     },
     "autoload": {
         "psr-4": {
-            "ExerciseManager\\": "src/"
+            "ExerciseManager\\": "src/",
+            "Entities\\": "src/Entities/"
         }
     }
 }
