--- a/serverAPI/tools/composer.json
+++ b/serverAPI/tools/composer.json
@@ -5,7 +5,8 @@
         "psr/log": "^1.0",
         "twig/twig": "^3.20",
         "slim/slim": "^4.14",
-        "doctrine/orm": "^3.3"
+        "doctrine/orm": "^3.3",
+        "symfony/cache": "^7.2"
     },
     "autoload": {
         "psr-4": {
