--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,23 +2,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
+      "name": "Launch Program",
+      "type": "node",
       "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": false,
-      "cwd": "/home/ensismoebius/workspaces/react-workspace/languid/serverAPI/exercises",
-      "program": "/home/ensismoebius/workspaces/react-workspace/languid/serverAPI/exercises/build/Debug/outDebug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/app/index.ts",
+      "preLaunchTask": "npm: build"
     }
   ]
 }
