--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,25 @@
       "platform": "android",
       "sourceMaps": true,
       "cwd": "${workspaceFolder}"
+    },
+    {
+      "name": "C/C++ Runner: Debug Session",
+      "type": "cppdbg",
+      "request": "launch",
+      "args": [],
+      "stopAtEntry": false,
+      "externalConsole": false,
+      "cwd": "/home/ensismoebius/workspaces/react-workspace/languid/serverAPI/exercises",
+      "program": "/home/ensismoebius/workspaces/react-workspace/languid/serverAPI/exercises/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
   ]
 }
