Monaco editor kind of working

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@monaco-editor/react": "^4.7.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.3.10",
@@ -36,9 +37,13 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "install": "^0.13.0",
+    "monaco-editor": "^0.33.0",
+    "npm": "^11.3.0",
     "react": "19.0.0",
     "react-devtools": "^6.1.1",
     "react-dom": "19.0.0",
+    "react-monaco-editor": "^0.43.0",
     "react-native": "0.79.2",
     "react-native-code-editor": "^0.0.0",
     "react-native-gesture-handler": "~2.24.0",
