web interface and root access to this one is done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -132,5 +132,9 @@
     "thread": "cpp",
     "typeinfo": "cpp",
     "variant": "cpp"
-  }
+  },
+  "Codegeex.Chat.LanguagePreference": "English",
+  "Codegeex.Comment.LanguagePreference": "English",
+  "Codegeex.CommitMessage.LanguagePreference": "English",
+  "Codegeex.SidebarUI.LanguagePreference": "English"
 }
