--- a/app.json
+++ b/app.json
@@ -41,6 +41,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "5c2de410-57db-4c6c-85c0-50edc8b3c98e"
+      }
     }
   }
 }
