--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-monaco-editor": "^0.43.0",
     "react-native": "0.79.2",
     "react-native-code-editor": "^0.0.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.25.0",
     "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.17.4",
@@ -59,7 +59,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "19.0.0",
+    "react-native-gesture-handler": "~2.25.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
