--- a/serverAPI/composer.json
+++ b/serverAPI/composer.json
@@ -2,7 +2,8 @@
     "name": "languid/serverapi",
     "require": {
         "mpdf/mpdf": "^8.2",
-        "twig/twig": "^3.21"
+        "twig/twig": "^3.21",
+        "guzzlehttp/psr7": "^2.7"
     },
     "autoload": {
         "psr-4": {
