--- a/serverAPI/.htaccess
+++ b/serverAPI/.htaccess
@@ -1,10 +1,9 @@
-# Enable Apache mod_rewrite
 RewriteEngine On
 
-# If the requested file or directory exists, serve it directly
+# Serve existing files or directories directly
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# Otherwise, route all requests to index.php
+# Route everything else to index.php
 RewriteRule ^ index.php [QSA,L]
